# look-ahead-planning-in-llms

./: .gitignore  .last_run_name  README.md  fine-tuning.md  generate_blocksworld.py  interpretability.md  main.py  pyproject.toml
config/: llama2-lora-test.yml  llama2-lora.yml  llama2-test.yml  llama2.yml
data/: blocksworld_L1.jsonl  blocksworld_L1.txt  blocksworld_L1_test.jsonl  blocksworld_L1_test.txt  blocksworld_L1_train.jsonl  blocksworld_L1_train.txt  blocksworld_L2.jsonl  blocksworld_L2.txt  blocksworld_L2_test.jsonl  blocksworld_L2_test.txt  blocksworld_L2_train.jsonl  blocksworld_L2_train.txt  blocksworld_L3.jsonl  blocksworld_L3.txt  blocksworld_L3_correct_full.jsonl  blocksworld_L3_correct_lora.jsonl  blocksworld_L3_test.jsonl  blocksworld_L3_test.txt  blocksworld_L3_train.jsonl  blocksworld_L3_train.txt  blocksworld_test.jsonl  blocksworld_test.txt  blocksworld_train.jsonl  blocksworld_train.txt
information/: paper.md
results/: baseline_llama2_7b.json  baseline_llama2_7b_chat.json  extraction_rates_full_2025-11-17-12-42-41-3911.json  full_2025-11-17-12-42-41-3911.json  full_2025-11-17-12-42-41-3911.txt  information_flow_full_2025-11-17-12-42-41-3911.json  lora_2025-11-17-09-14-09-9bf6.json  lora_2025-11-17-09-14-09-9bf6.txt
scripts/: analyze_extraction_rates.ipynb  analyze_information_flow.ipynb  filter_correct_predictions.py  generate_blocksworld_data.py  plot_extraction_rates.py  plot_information_flow.py
src/: common.py  eval_baseline.py  eval_finetuned.py  quick_inference_test.py  test_llama_inference.py
src/core/: train.py
(+3 files in other folders)
