[project]
name = "dladv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.33.0",
    "fastapi>=0.121.1",
    "llama-stack>=0.3.2",
    "modal>=1.2.1",
    "peft==0.12.0",
    "torch==2.3.0",
    "transformers==4.44.0",
]
