[project]
name = "dladv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.33.0",
    "baukit",
    "fastapi>=0.121.1",
    "ipykernel>=7.1.0",
    "llama-stack>=0.3.2",
    "matplotlib>=3.10.7",
    "modal>=1.2.1",
    "peft==0.12.0",
    "torch==2.3.0",
    "transformers==4.44.0",
]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit" }
